Made some changes to ChiliPeppr myWorkspace using Cloud9

--- a/auto-generated-workspace.html
+++ b/auto-generated-workspace.html
@@ -1198,6 +1198,24 @@ cpdefine("inline:com-chilipeppr-workspace-tinyg", ["chilipeppr_ready"], function
                 }
             ); //End TinyG
 
+            chilipeppr.load(
+              "com-chilipeppr-webrtcclient",
+              "http://raw.githubusercontent.com/xpix/widget-cam/master/auto-generated-widget.html",
+              function() {
+                // Callback after widget loaded into #myDivWidgetCam
+                // Now use require.js to get reference to instantiated widget
+                cprequire(
+                  ["inline:com-chilipeppr-widget-cam"], // the id you gave your widget
+                  function(myObjWidgetCam) {
+                    // Callback that is passed reference to the newly loaded widget
+                    console.log("Widget / Cam just got loaded.", myObjWidgetCam);
+                    myObjWidgetCam.init();
+                  }
+                );
+              }
+            );
+
+
             // WebRTC Client com-chilipeppr-webrtcclient
             /*
             chilipeppr.load(
@@ -1330,7 +1348,7 @@ cpdefine("inline:com-chilipeppr-workspace-tinyg", ["chilipeppr_ready"], function
                         <!-- Tinyg -->
                         <div id="com-chilipeppr-tinyg" class="">Load TinyG Here</div>
                         <!-- WebRTC Client -->
-                        <div id="com-chilipeppr-webrtcclient" class="hidden">Load WebRTC Client Here</div>
+                        <div id="com-chilipeppr-webrtcclient">Load WebRTC Client Here</div>
                         <!-- Serial Port Selector -->
                         <div id="com-chilipeppr-widget-spjs-instance" class="">Load Serial Port Selector Here</div>
                     </div>
