--- a/workspace.html
+++ b/workspace.html
@@ -139,7 +139,7 @@
                         <!-- Tinyg -->
                         <div id="com-chilipeppr-tinyg" class="">Load TinyG Here</div>
                         <!-- WebRTC Client -->
-                        <div id="com-chilipeppr-webrtcclient" class="hidden">Load WebRTC Client Here</div>
+                        <div id="com-chilipeppr-webrtcclient">Load WebRTC Client Here</div>
                         <!-- Serial Port Selector -->
                         <div id="com-chilipeppr-widget-spjs-instance" class="">Load Serial Port Selector Here</div>
                     </div>
