Made some changes to ChiliPeppr myWorkspace using Cloud9

--- a/auto-generated-workspace.html
+++ b/auto-generated-workspace.html
@@ -1182,11 +1182,13 @@ cpdefine("inline:com-chilipeppr-workspace-tinyg", ["chilipeppr_ready"], function
             chilipeppr.load(
                 "com-chilipeppr-tinyg",
                 // Lauer's v2 (Jul 28th 2015) Fixed to {"sv":1}
-                "http://raw.githubusercontent.com/chilipeppr/widget-tinyg/master/auto-generated-widget.html",
+                //"http://raw.githubusercontent.com/chilipeppr/widget-tinyg/master/auto-generated-widget.html",
                 // Danal's version
                 //"http://fiddle.jshell.net/Danal/6rq2wx3o/show/light/",
                 // Lauer's version
                 //"http://fiddle.jshell.net/chilipeppr/XxEBZ/show/light/",
+                // Frank's version with publish state
+                "http://raw.githubusercontent.com/xpix/widget-tinyg/master/auto-generated-widget.html",
         
                 function () {
                     cprequire(
